add source map to compilation

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "outFile": "../js/app.js"
+        "outFile": "../js/app.js",
+        "sourceMap": true
     }
 }
